--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
         <meta name="description" content="Игры для детей">
         <meta name="keywords" content="игры, крестики-нолики, крестики, нолики">
         <title>
-            Игры для всех
+            Игры для всех!
         </title>
         <link rel = "stylesheet" href = "css/style.css">
     </head>
