--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     <body>
          <h1>ИГРЫ</h1>
 
-         <div> Игра для детей: <b>крестики-нолики</b></div>
+         <div> Игра: <b>крестики-нолики</b></div>
          <p><a href = "tic.html" target = "_blank"
           title = "Нажми"> Крестики-нолики</a></p>
           <button onclick="click()"> кнопка</button>
