--- a/tic.html
+++ b/tic.html
@@ -15,7 +15,7 @@
          <header><h1 id="header">Крестики-нолики</h1></header>
          <main>
 
-         <p> Игра для детей: <b>крестики-нолики</b></p>
+         <p> Игра: <b>крестики-нолики</b></p>
 
         <p><details>
             <summary> Про крестики-нолики</summary>
